# SmolBlit2D

./: CMakeLists.txt  README.md
cmake/: Config.cmake.in
examples/: example1.cpp  example2.cpp  example_app.cpp  example_app.hpp  input.cpp  input.hpp
examples/assets/: player.dds  shadow.dds  smiley.dds
examples/assets/cards/: 2-clubs.dds  2-diamonds.dds  2-hearts.dds  2-spades.dds  ace-clubs.dds  ace-diamonds.dds  ace-hearts.dds  ace-spades.dds  jack-hearts.dds  king-hearts.dds  queen-hearts.dds
source/smol/: blit2d.hpp  core2d.hpp
source/smol/blit2d/: bitmap.cpp  bitmap.hpp  color.cpp  color.hpp  pal_bitmap.cpp  pal_bitmap.hpp  palette.hpp  rect.hpp  renderer.cpp  renderer.hpp  size.hpp  tilemap.cpp  tilemap.hpp  tileset.cpp  tileset.hpp  vec2.hpp
source/smol/core2d/: rect.hpp  size.hpp  vec2.hpp
